separate the create graph form into date graph form and person graph form

--- a/project_management_app/register/templates/admin/date_graph.html
+++ b/project_management_app/register/templates/admin/date_graph.html
@@ -2,7 +2,7 @@
 {% block title %}Created Graph {% endblock %}
 
 {% block content %}
-    <div style="width: 400px; height: 300px;"> <!-- Set the container dimensions -->
+    <div> <!-- Set the container dimensions -->
       <canvas id="line-chart" ></canvas> <!-- Set canvas dimensions -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
